Fixed sign in and alignment of nav items

--- a/app/assets/stylesheets/components/_hover_card.scss
+++ b/app/assets/stylesheets/components/_hover_card.scss
@@ -8,7 +8,6 @@ html, body {
 }
 
 body {
-  padding: 1rem 0;
   background: #f9f9fb;
 }
 
